# health-assist-agent

./: .env.example  .gitignore  .mise.toml  BUILD_PLAN.md  README.md  pyproject.toml
data/knowledge/: .gitkeep  00_sources_notice.md  bencao_gangmu_brief.md  medical_common_sense.md  medication_otc_basics.md
data/mcp_allowed/: README.md  用药备忘示例.txt
docs/: ARCHITECTURE.md  COLUMNS_INDEX.md  COLUMN_LANGCHAIN.md  COLUMN_LANGGRAPH.md  PHASE1_LEARNING.md  PHASE1_RUN_FLOW.md  PHASE2_LEARNING.md  PHASE2_RUN_FLOW.md  PHASE3_LEARNING.md  PHASE3_RUN_FLOW.md  PHASE4_LEARNING.md  PHASE4_RUN_FLOW.md  PHASE5_LEARNING.md  PHASE5_RUN_FLOW.md  eval_examples.md
src/: __init__.py  agent.py  config.py  main.py  prompts.py  rag.py  rag_ingest.py  sensitive_hint.py
src/tools/: __init__.py  basic_tools.py  mcp_tools.py  rag_tool.py
tests/: test_sensitive_hint.py
